@@ -1,20 +1,13 @@
 {
-  "timestamp" : "2022-11-07T16:22:04Z",
-  "count_outdated" : 424,
-  "uniques_outdated" : 232,
-  "count" : 451,
+  "timestamp" : "2022-11-08T01:23:11Z",
+  "count_outdated" : 427,
+  "uniques_outdated" : 233,
+  "count" : 452,
   "uniques" : 250,
   "clones" : [
     {
-      "timestamp": "2022-10-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
       "timestamp": "2022-10-25T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
