@@ -1,15 +1,10 @@
 {
-  "count": 27,
+  "count": 25,
   "uniques": 9,
   "clones": [
     {
-      "timestamp": "2022-10-24T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-10-25T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 2
     },
     {
