@@ -1,3 +1,11 @@
+2022-11-08T01:23:11Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3415556300 # 593
+* notice: last 14d: unq all: 9 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 232 424 / 250 451
+* notice: next accum: outdated-unq outdated-all / unq all: 233 427 / 250 452
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +2 +3 -0 -1 / 2 2
+* notice: removed / changed dates: [2022-10-24] / [2022-10-25]
+
 2022-11-07T16:22:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3412112521 # 592
 * notice: last 14d: unq all: 9 27
